kubernetes/services/element-call-custom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-call
  namespace: element-call
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element-call
  template:
    metadata:
      labels:
        app: element-call
    spec:
      containers:
        - name: element-call
          image: ghcr.io/element-hq/element-call:v0.26.1@sha256:259bde083107460773def8d693f5bb39abb4532715cf2e702604483fbc180de3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: element-call-config
