kubernetes/services/element-call-custom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-call
  namespace: element-call
spec:
  selector:
    app: element-call
  ports:
    - port: 80
      targetPort: 8080
