kubernetes/services/element-call-custom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element-call
  namespace: element-call
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Element Call
    gethomepage.dev/icon: element.png
    gethomepage.dev/description: Video meetings
    gethomepage.dev/weight: "600"
    gethomepage.dev/siteMonitor: http://element-call.element-call.svc.cluster.local
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - call.nuke.zip
      secretName: element-call-tls

  rules:
    - host: call.nuke.zip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element-call
                port:
                  number: 80
